# fizzyx

./: .gitmodules  CMakeLists.txt  LICENSE.md
apps/: CMakeLists.txt
apps/Bounce/: bouncedemo.cpp  bouncedemo.h
apps/DemoCore/: basiccomponents.cpp  basiccomponents.h  demoapp.cpp  demoapp.h  ecs.cpp  ecs.h  graphicsmanager.cpp  graphicsmanager.h
apps/Fireworks/: CMakeLists.txt  fireworks.cpp  fireworkscomponents.cpp  fireworkscomponents.h  particlespawner.cpp  particlespawner.h
apps/ForceGenerator/: anchoredspringfg.cpp  anchoredspringfg.h  fgcomponents.cpp  fgcomponents.h  forcegeneratordemo.cpp  forcegeneratordemo.h
include/: physicsworld.h
include/acceleration/: accelerationstructure.h
include/bodies/: pointmass.h
include/collision_utils/: box.h  circle.h  collisionshape.h  polygon.h
include/fizzyx/: physicsworld.h
include/fizzyx/acceleration/: accelerationstructure.h  unoptimizedstore.h
include/fizzyx/bodies/: physicsentity.h  pointmass.h
include/fizzyx/collision/: box.h  circle.h  collisiondetector.h  collisionshape.h  polygon.h
include/fizzyx/collision_utils/: box.h  circle.h  collisiondetector.h  collisionshape.h  polygon.h
include/fizzyx/core/: forcegenerator.h  physicsentity.h  physicssolver.h
include/fizzyx/forcegenerators/: forcegenerator.h
include/fizzyx/math/: mat22.h  mat33.h  mathutils.h  vector3.h
include/fizzyx/narrowphasedetectors/: nulldetector.h  pointmasscollisiondetector.h  simplecollisiondetector.h
include/fizzyx/solvers/: nullsolver.h  physicssolver.h  simplelinearsolver.h
include/fizzyx/tutorial/: nulldetector.h  nullsolver.h  pointmass.h  pointmasscollisiondetector.h  simplecollisiondetector.h  simplelinearsolver.h
include/math/: mat22.h  mat33.h  mathutils.h  vector2.h  vector3.h
include/narrowphasedetectors/: nulldetector.h  pointmasscollisiondetector.h
include/solvers/: nullsolver.h  physicssolver.h
src/: CMakeLists.txt  physicsworld.cpp
src/acceleration/: accelerationstructure.cpp  unoptimizedstore.cpp
src/bodies/: physicsentity.cpp  pointmass.cpp
src/collision_utils/: box.cpp  circle.cpp  collisiondetector.cpp  collisionshape.cpp  polygon.cpp
src/fizzyx/: CMakeLists.txt  physicsworld.cpp
src/fizzyx/collision/: box.cpp  circle.cpp  collisiondetector.cpp  collisionshape.cpp  polygon.cpp
src/fizzyx/core/: CMakeLists.txt  forcegenerator.cpp  physicsentity.cpp  physicssolver.cpp
src/fizzyx/math/: mat22.cpp  mat33.cpp  mathutils.cpp  vector2.cpp
src/fizzyx/tutorial/: nulldetector.cpp  nullsolver.cpp  pointmass.cpp  pointmasscollisiondetector.cpp  simplecollisiondetector.cpp  simplelinearsolver.cpp
src/forcegenerators/: forcegenerator.cpp
src/math/: CMakeLists.txt  mat22.cpp  mat33.cpp  mathutils.cpp  vector2.cpp  vector3.cpp
src/narrowphasedetectors/: nulldetector.cpp  pointmasscollisiondetector.cpp  simplecollisiondetector.cpp
src/solvers/: nullsolver.cpp  physicssolver.cpp  simplelinearsolver.cpp
tests/: CMakeLists.txt  matrixtests.cpp  vectortests.cpp
